--- a/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_store_nav.html.erb
@@ -4,11 +4,13 @@
       <%= active_link_to_with_icon('chevron-left', Spree.t('admin.back_to_dashboard'), spree.admin_dashboard_path, class: 'nav-link') %>
     </li>
 
-    <li class="nav-item">
-      <%= active_link_to_with_icon('building-store', Spree.t(:store_details), spree.edit_admin_store_path(section: 'general-settings'), class: 'nav-link', active: params[:section] == 'general-settings') %>
-    </li>
+    <% if can?(:manage, current_store) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('building-store', Spree.t(:store_details), spree.edit_admin_store_path(section: 'general-settings'), class: 'nav-link', active: params[:section] == 'general-settings') %>
+      </li>
+    <% end %>
 
-    <% if defined?(current_account) && current_account.present? %>
+    <% if defined?(current_account) && current_account.present? && can?(:manage, current_account) %>
       <li class="nav-item">
         <%= active_link_to_with_icon 'receipt', Spree.t(:account), main_app.edit_account_path(current_account), class: 'nav-link' %>
       </li>
@@ -17,56 +19,82 @@
       </li>
     <% end %>
 
-    <li class="nav-item">
-      <%= active_link_to_with_icon('send', Spree.t(:emails), spree.edit_admin_store_path(section: 'emails'), class: 'nav-link', active: params[:section] == 'emails') %>
-    </li>
-    <li class="nav-item">
-      <%= active_link_to_with_icon('list-check', Spree.t(:policies), spree.edit_admin_store_path(section: 'policies'), class: 'nav-link', active: params[:section] == 'policies') %>
-    </li>
-    <li class="nav-item">
-      <%= active_link_to_with_icon('shopping-cart', Spree.t(:checkout), spree.edit_admin_store_path(section: 'checkout'), class: 'nav-link', active: params[:section] == 'checkout') %>
-    </li>
-
-    <li class="nav-item">
-      <%= active_link_to_with_icon('world-www', Spree.t(:domains), spree.admin_custom_domains_path, class: 'nav-link') %>
-    </li>
-
-    <li class="nav-item">
-      <%= active_link_to_with_icon('credit-card', Spree.t(:payments), spree.admin_payment_methods_path, class: 'nav-link') %>
-    </li>
-
-    <li class="nav-item">
-      <%= active_link_to_with_icon('world', Spree.t(:zones), spree.admin_zones_path, { active: %w[zones countries states].include?(controller_name), class: 'nav-link' }) %>
-    </li>
-    <li class="nav-item">
-      <%= active_link_to_with_icon('truck', Spree.t(:shipping), spree.admin_shipping_methods_path, { active: %w[shipping_methods shipping_categories].include?(controller_name), class: 'nav-link' }) %>
-    </li>
-    <li class="nav-item">
-      <%= active_link_to_with_icon('receipt-tax', Spree.t(:tax), spree.admin_tax_rates_path, active: %w[tax_rates tax_categories stripe_tax_registrations].include?(controller_name), class: 'nav-link')  %>
-    </li>
-    <li class="nav-item">
-      <%= active_link_to_with_icon('receipt-refund', Spree.t(:returns), spree.admin_return_authorization_reasons_path, active: %w[refund_reasons reimbursement_types return_authorization_reasons].include?(controller_name), class: 'nav-link')  %>
-    </li>
-    <li class="nav-item">
-      <%= active_link_to_with_icon('map-pin', Spree.t(:stock_locations), spree.admin_stock_locations_path, class: 'nav-link')  %>
-    </li>
-    <% if enterprise_edition? %>
+    <% if can?(:manage, current_store) %>
       <li class="nav-item">
-        <%= active_link_to_with_icon('history', Spree.t('admin.audit_log'), spree.admin_audits_path, class: 'nav-link w-auto', active: %w[audits exports imports].include?(controller_name)) %>
+        <%= active_link_to_with_icon('send', Spree.t(:emails), spree.edit_admin_store_path(section: 'emails'), class: 'nav-link', active: params[:section] == 'emails') %>
       </li>
-    <% else %>
       <li class="nav-item">
-        <%= external_link_to nil, 'https://spreecommerce.org/pricing', class: 'nav-link d-flex align-items-center w-100' do %>
-          <%= icon 'history' %>
-          <%= Spree.t('admin.audit_log') %>
-
-          <span class="badge ml-auto with-tip rounded-pill" title="This feature is part of the Enterprise Edition.">Enterprise</span>
-        <% end %>
+        <%= active_link_to_with_icon('list-check', Spree.t(:policies), spree.edit_admin_store_path(section: 'policies'), class: 'nav-link', active: params[:section] == 'policies') %>
+      </li>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('shopping-cart', Spree.t(:checkout), spree.edit_admin_store_path(section: 'checkout'), class: 'nav-link', active: params[:section] == 'checkout') %>
       </li>
     <% end %>
-    <li class="nav-item">
-      <%= active_link_to_with_icon('terminal', Spree.t(:developers), spree.admin_oauth_applications_path, class: 'nav-link', active: %w[oauth_applications webhooks_subscribers].include?(controller_name)) %>
-    </li>
+
+    <% if can?(:manage, Spree::CustomDomain) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('world-www', Spree.t(:domains), spree.admin_custom_domains_path, class: 'nav-link') %>
+      </li>
+    <% end %>
+
+    <% if can?(:manage, Spree::PaymentMethod) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('credit-card', Spree.t(:payments), spree.admin_payment_methods_path, class: 'nav-link') %>
+      </li>
+    <% end %>
+
+    <% if can?(:manage, Spree::Zone) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('world', Spree.t(:zones), spree.admin_zones_path, { active: %w[zones countries states].include?(controller_name), class: 'nav-link' }) %>
+      </li>
+    <% end %>
+
+    <% if can?(:manage, Spree::ShippingMethod) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('truck', Spree.t(:shipping), spree.admin_shipping_methods_path, { active: %w[shipping_methods shipping_categories].include?(controller_name), class: 'nav-link' }) %>
+      </li>
+    <% end %>
+
+    <% if can?(:manage, Spree::TaxRate) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('receipt-tax', Spree.t(:tax), spree.admin_tax_rates_path, active: %w[tax_rates tax_categories stripe_tax_registrations].include?(controller_name), class: 'nav-link')  %>
+      </li>
+    <% end %>
+
+    <% if can?(:manage, Spree::ReturnAuthorizationReason) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('receipt-refund', Spree.t(:returns), spree.admin_return_authorization_reasons_path, active: %w[refund_reasons reimbursement_types return_authorization_reasons].include?(controller_name), class: 'nav-link')  %>
+      </li>
+    <% end %>
+
+    <% if can?(:manage, Spree::StockLocation) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('map-pin', Spree.t(:stock_locations), spree.admin_stock_locations_path, class: 'nav-link')  %>
+      </li>
+    <% end %>
+
+    <% if can?(:manage, Spree::Store) %>
+      <% if enterprise_edition? %>
+        <li class="nav-item">
+          <%= active_link_to_with_icon('history', Spree.t('admin.audit_log'), spree.admin_audits_path, class: 'nav-link w-auto', active: %w[audits exports imports].include?(controller_name)) %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= external_link_to nil, 'https://spreecommerce.org/pricing', class: 'nav-link d-flex align-items-center w-100' do %>
+            <%= icon 'history' %>
+            <%= Spree.t('admin.audit_log') %>
+
+            <span class="badge ml-auto with-tip rounded-pill" title="This feature is part of the Enterprise Edition.">Enterprise</span>
+          <% end %>
+        </li>
+      <% end %>
+    <% end %>
+
+    <% if can?(:manage, Spree::OauthApplication) %>
+      <li class="nav-item">
+        <%= active_link_to_with_icon('terminal', Spree.t(:developers), spree.admin_oauth_applications_path, class: 'nav-link', active: %w[oauth_applications webhooks_subscribers].include?(controller_name)) %>
+      </li>
+    <% end %>
   </ul>
 <% else %>
   <%= render 'spree/admin/shared/sidebar/store_dropdown' %>
@@ -136,7 +164,7 @@
     <li class="nav-item border-top border-top-dashed pt-2">
       <%= active_link_to_with_icon('settings', Spree.t(:settings), spree.edit_admin_store_path(section: 'general-settings'), class: 'nav-link', active: params[:section] == 'general-settings') %>
     </li>
-    <% if defined?(current_account) && current_account.present? %>
+    <% if defined?(current_account) && current_account.present? && can?(:manage, current_account) %>
       <li class="nav-item">
         <%= active_link_to_with_icon 'users', Spree.t(:account_members), main_app.account_members_path(current_account), class: 'nav-link' %>
       </li>
