--- a/admin/app/views/spree/admin/taxons/_form.html.erb
+++ b/admin/app/views/spree/admin/taxons/_form.html.erb
@@ -70,7 +70,7 @@
             </span>
           </h5>
 
-          <% if @taxon.manual? %>
+          <% if @taxon.manual? && can?(:create, Spree::Classification) %>
             <span data-toggle="modal" data-target="#modal">
               <%= link_to_with_icon 'plus', Spree.t(:add_products), spree.new_admin_taxon_classification_path(@taxon.id), class: 'btn btn-light btn-sm', data: { turbo_frame: 'dialog_modal' } %>
             </span>
