--- a/admin/app/views/spree/admin/products/edit.html.erb
+++ b/admin/app/views/spree/admin/products/edit.html.erb
@@ -5,7 +5,7 @@
     Spree.t(:digital_assets),
     spree.admin_product_digital_assets_path(@product),
     class: "dropdown-item",
-  ) %>
+  ) if can?(:manage, Spree::DigitalAsset) %>
   <%= external_page_preview_link(@product) %>
 
   <% if can?(:clone, @product) %>
