--- a/admin/app/views/spree/admin/promotions/_actions.html.erb
+++ b/admin/app/views/spree/admin/promotions/_actions.html.erb
@@ -4,17 +4,21 @@
       <%= icon('bolt', class: 'mr-2') %>
       <%= Spree.t(:promotion_actions) %>
     </h5>
-    <span data-toggle="modal" data-target="#modal">
-      <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_action_path(@promotion), class: 'btn btn-primary btn-sm', data: { turbo_frame: 'dialog_modal' } %>
-    </span>
+    <% if can?(:create, Spree::PromotionAction.new(promotion: @promotion)) %>
+      <span data-toggle="modal" data-target="#modal">
+        <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_action_path(@promotion), class: 'btn btn-primary btn-sm', data: { turbo_frame: 'dialog_modal' } %>
+      </span>
+    <% end %>
   </div>
   <div class="card-body d-flex flex-column gap-2 px-1 pt-0 pb-1">
     <% if @promotion.promotion_actions.empty? %>
       <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
         <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::PromotionAction)) %>
-        <span data-toggle="modal" data-target="#modal">
-          <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_action_path(@promotion), class: 'btn btn-light btn-sm ml-3', data: { turbo_frame: 'dialog_modal' } %>
-        </span>
+        <% if can?(:create, Spree::PromotionAction.new(promotion: @promotion)) %>
+          <span data-toggle="modal" data-target="#modal">
+            <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_action_path(@promotion), class: 'btn btn-light btn-sm ml-3', data: { turbo_frame: 'dialog_modal' } %>
+          </span>
+        <% end %>
       </div>
     <% else %>
       <%= render collection: @promotion.promotion_actions, 
