--- a/admin/app/views/spree/admin/promotions/_rules.html.erb
+++ b/admin/app/views/spree/admin/promotions/_rules.html.erb
@@ -4,10 +4,11 @@
       <%= icon('checklist', class: 'mr-2') %>
       <%= Spree.t(:rules) %>
     </h5>
-    
-    <span data-toggle="modal" data-target="#modal">
-      <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_rule_path(@promotion), class: 'btn btn-primary btn-sm', data: { turbo_frame: 'dialog_modal' } %>
-    </span>
+    <% if can?(:create, Spree::PromotionRule.new(promotion: @promotion)) %>
+      <span data-toggle="modal" data-target="#modal">
+        <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_rule_path(@promotion), class: 'btn btn-primary btn-sm', data: { turbo_frame: 'dialog_modal' } %>
+      </span>
+    <% end %>
   </div>
   <div class="card-body">
     <div class="form-group mb-0">
@@ -27,9 +28,11 @@
     <% if @promotion.promotion_rules.empty? %>
       <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
         <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::PromotionRule)) %>
-        <span data-toggle="modal" data-target="#modal">
-          <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_rule_path(@promotion), class: 'btn btn-light btn-sm ml-3', data: { turbo_frame: 'dialog_modal' } %>
-        </span>
+        <% if can?(:create, Spree::PromotionRule.new(promotion: @promotion)) %>
+          <span data-toggle="modal" data-target="#modal">
+            <%= link_to_with_icon 'plus', Spree.t(:add_one), spree.new_admin_promotion_rule_path(@promotion), class: 'btn btn-light btn-sm ml-3', data: { turbo_frame: 'dialog_modal' } %>
+          </span>
+        <% end %>
       </div>
     <% else %>
       <%= render collection: @promotion.promotion_rules, 
