--- a/admin/app/views/spree/admin/shared/sidebar/_orders_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_orders_nav.html.erb
@@ -1,33 +1,35 @@
 <% orders_active = %[orders checkouts].include?(controller_name) || @order %>
-<li class="nav-item">
-  <%= active_link_to spree.admin_orders_path, class: 'nav-link', active: orders_active do %>
-    <%= icon 'inbox' %>
-    <%= Spree.t(:orders) %>
+<% if can?(:manage, Spree::Order) %>
+  <li class="nav-item">
+    <%= active_link_to spree.admin_orders_path, class: 'nav-link', active: orders_active do %>
+      <%= icon 'inbox' %>
+      <%= Spree.t(:orders) %>
 
-    <% if ready_to_ship_orders_count&.positive? %>
-      <span class="badge ml-auto">
-        <%= ready_to_ship_orders_count %>
-      </span>
-    <% end %>
-  <% end %>
-  <% if orders_active && (ready_to_ship_orders_count&.positive? || can?(:manage, :checkouts)) %>
-    <ul class="ml-4 pl-1 mb-2 nav-submenu mt-1">
       <% if ready_to_ship_orders_count&.positive? %>
-        <li class="nav-item">
-          <%= active_link_to spree.admin_orders_path(q: {shipment_state_not_in: [:shipped, :canceled]}), class: 'nav-link', active: params.dig(:q, :shipment_state_not_in).present? do %>
-            <span><%= Spree.t('admin.orders.orders_to_fulfill') %></span>
-            <span class="badge ml-auto">
-              <%= ready_to_ship_orders_count %>
-            </span>
-          <% end %>
-        </li>
+        <span class="badge ml-auto">
+          <%= ready_to_ship_orders_count %>
+        </span>
       <% end %>
+    <% end %>
+    <% if orders_active && (ready_to_ship_orders_count&.positive? || can?(:manage, :checkouts)) %>
+      <ul class="ml-4 pl-1 mb-2 nav-submenu mt-1">
+        <% if ready_to_ship_orders_count&.positive? %>
+          <li class="nav-item">
+            <%= active_link_to spree.admin_orders_path(q: {shipment_state_not_in: [:shipped, :canceled]}), class: 'nav-link', active: params.dig(:q, :shipment_state_not_in).present? do %>
+              <span><%= Spree.t('admin.orders.orders_to_fulfill') %></span>
+              <span class="badge ml-auto">
+                <%= ready_to_ship_orders_count %>
+              </span>
+            <% end %>
+          </li>
+        <% end %>
 
-      <% if can?(:manage, :checkouts) %>
-        <li class="nav-item">
-          <%= active_link_to Spree.t(:draft_orders), spree.admin_checkouts_path, class: 'nav-link' %>
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
-</li>
+        <% if can?(:manage, :checkouts) %>
+          <li class="nav-item">
+            <%= active_link_to Spree.t(:draft_orders), spree.admin_checkouts_path, class: 'nav-link' %>
+          </li>
+        <% end %>
+      </ul>
+    <% end %>
+  </li>
+<% end %>
