--- a/admin/app/views/spree/admin/users/_shipping.html.erb
+++ b/admin/app/views/spree/admin/users/_shipping.html.erb
@@ -6,12 +6,12 @@
       <%= link_to_with_icon 'edit', Spree.t(:edit),
         spree.edit_admin_address_path(@user.shipping_address, type: 'shipping'),
         class: 'btn btn-light btn-sm',
-        data: { turbo_frame: :edit_address_shipping } %>
+        data: { turbo_frame: :edit_address_shipping } if can?(:update, @user.shipping_address) %>
     <% else %>
       <%= link_to_with_icon 'plus', Spree.t(:add),
         spree.new_admin_address_path(user_id: @user.id, default_shipping: true, type: 'shipping'),
         class: 'btn btn-light btn-sm',
-        data: { turbo_frame: :new_address_shipping } %>
+        data: { turbo_frame: :new_address_shipping } if can?(:create, Spree::Address) && can?(:update, @user) %>
     <% end %>
   </div>
   <div class="card-body">
