Making sure we enforce everywhere permission through out the admin UI (#12574)
* Making sure we enforce everywhere permission through out the admin UI

* Update runtime_configuration.rb

* Update edit.html.erb

--- a/admin/app/views/spree/admin/products/edit.html.erb
+++ b/admin/app/views/spree/admin/products/edit.html.erb
@@ -5,7 +5,7 @@
     Spree.t(:digital_assets),
     spree.admin_product_digital_assets_path(@product),
     class: "dropdown-item",
-  ) %>
+  ) if can?(:manage, Spree::Digital) %>
   <%= external_page_preview_link(@product) %>
 
   <% if can?(:clone, @product) %>
