--- a/admin/app/views/spree/admin/themes/_theme.html.erb
+++ b/admin/app/views/spree/admin/themes/_theme.html.erb
@@ -1,21 +1,15 @@
 <tr id="<%= spree_dom_id theme %>">
   <td class="w-70 p-0">
     <%= link_to theme.ready? ? spree.edit_admin_theme_path(theme) : '#', class: 'd-flex align-items-top p-3' do %>
-      <% if theme.screenshot_url.present? %>
-        <%= image_tag(
-          theme.screenshot_url,
-          class: 'img-thumbnail',
-          style: 'width: 120px; height: 72px',
-          loading: :lazy
-        ) %>
-      <% else %>
-        <%= render 'spree/admin/shared/no_image', width: 120, height: 72 %>
-      <% end %>
+      <%= render 'spree/admin/themes/theme_preview_image', theme: theme %>
 
       <div class="d-flex flex-column ml-3">
         <strong><%= theme.name %></strong>
         <p class="mb-0 mt-1">
-          <span class="text-muted">Updated: <%= local_time_ago(theme.updated_at, class: 'with-tip') %></span>
+          <span class="text-muted">
+            <%= I18n.t('activerecord.attributes.updated_at') %>: 
+            <%= local_time_ago(theme.updated_at, class: 'with-tip') %>
+          </span>
         </p>
       </div>
     <% end %>
@@ -41,14 +35,14 @@
   <td class="w-20">
     <% if theme.ready? %>
       <div class="d-flex justify-content-end w-100">
-        <%= link_to Spree.t(:publish), publish_admin_theme_path(theme), class: 'btn btn-sm btn-light mr-2', data: { turbo_method: :put } unless theme.default? %>
+        <%= link_to Spree.t('actions.publish'), publish_admin_theme_path(theme), class: 'btn btn-sm btn-light mr-2', data: { turbo_method: :put } unless theme.default? %>
         <div class="dropdown">
           <button class="btn btn-sm btn-light h-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= icon('dots', class: 'mr-0') %>
           </button>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
             <%= link_to_edit theme, class: 'dropdown-item' %>
-            <%= link_to_with_icon 'copy', Spree.t(:duplicate), clone_admin_theme_path(theme), class: 'dropdown-item', data: { turbo_method: :post } %>
+            <%= link_to_with_icon 'copy', Spree.t(:clone), spree.clone_admin_theme_path(theme), class: 'dropdown-item', data: { turbo_method: :post } %>
             <% unless theme.default? %>
             <%= link_to_delete(theme, icon: 'trash', class: 'dropdown-item btn-danger shadow-none') if can?(:delete, theme) %>
           <% end %>
