Admin UI: improve nav pills and filters

--- a/admin/app/assets/stylesheets/spree/admin/components/_tables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_tables.scss
@@ -3,8 +3,16 @@
 }
 
 .filter-wrap {
-  padding: 0.75rem;
+  padding: 0.5rem;
   border-bottom: 1px solid $gray-50;
+}
+
+#table-filter {
+  padding: 0.75rem;
+  border-radius: $border-radius;
+  border: 1px solid $gray-50;
+  background-color: $gray-25;
+  margin-top: 0.5rem;
 }
 
 table.table {
