--- a/admin/app/views/spree/admin/shared/_content_header.html.erb
+++ b/admin/app/views/spree/admin/shared/_content_header.html.erb
@@ -63,7 +63,7 @@
 <% end %>
 
 <% if content_for?(:page_tabs) %>
-  <ul class="nav nav-bare flex-nowrap overflow-auto w-100 mb-3">
+  <ul class="nav nav-pills flex-nowrap overflow-auto w-100 mb-3">
     <%= yield :page_tabs %>
   </ul>
 <% end %>
