--- a/admin/app/views/spree/admin/stock_items/_filters.html.erb
+++ b/admin/app/views/spree/admin/stock_items/_filters.html.erb
@@ -4,7 +4,7 @@
 
     <%= render 'spree/admin/shared/filters_button' %>
   </div>
-  <div data-reveal-target="item" class="d-none mt-4" id="table-filter">
+  <div data-reveal-target="item" class="d-none" id="table-filter">
     <div class="row">
       <div class="col-12 col-lg-6">
         <div class="form-group">
