--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -98,7 +98,8 @@ $btn-active-box-shadow:       inset 0 3px 5px rgba($black, .025) !default;
 $btn-font-weight: 500 !default;
 $btn-disabled-opacity: 0.3 !default;
 
-$navbar-brand-height: 3.625rem;
+$nav-link-padding-y:                .5rem !default;
+$nav-link-padding-x:                .6rem !default;
 
 $box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06) !default;
 $box-shadow-xs: rgba(43, 34, 51, 0.04) 0px 1px 2px !default;
