Downgrade TinyMCE to 6.x due to license change
TinyMCE changed license to GPL in 7.x. Probably in the future we should migrate off to TipTap or other alternative

--- a/admin/app/assets/stylesheets/spree/admin/plugins/_tinymce_custom.scss
+++ b/admin/app/assets/stylesheets/spree/admin/plugins/_tinymce_custom.scss
@@ -54,18 +54,18 @@
 
 /* Override TinyMCE UI font size */
 .tox-toolbar__group {
-  font-size: 13px !important; /* Change this value to your desired font size */
+  font-size: $font-size-base !important; /* Change this value to your desired font size */
 }
 .tox-mbtn__select-label {
-  font-size: 13px !important; /* Change this value to your desired font size */
+  font-size: $font-size-base !important; /* Change this value to your desired font size */
 }
 /* Override TinyMCE Content font size */
 .tox-tinymce {
-  font-size: 13px !important; /* Change this value to your desired font size */
+  font-size: $font-size-base !important; /* Change this value to your desired font size */
 }
 .tox .tox-collection__item-label, .tox-tbtn__select-label {
-  font-size: 13px !important; /* Change this value to your desired font size */
-  font-family: 'Inter';
+  font-size: $font-size-base !important; /* Change this value to your desired font size */
+  font-family: $font-family-sans-serif;
 }
 
 .tox.tox-tinymce-aux .tox-toolbar__overflow, .tox .tox-menu {
