--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -57,7 +57,7 @@ $font-size-sm:    0.75rem !default;
 $font-size-lg:    1rem !default;
 $font-weight-normal: 400 !default;
 $font-weight-bold:            600 !default;
-$headings-font-family: Inter, sans-serif !default;
+$headings-font-family: $font-family-sans-serif;
 $line-height-base:            1.5 !default;
 $border-radius: 0.5rem !default;
 $border-radius-sm: 0.4rem !default;
@@ -148,10 +148,24 @@ $dropdown-link-hover-bg: $gray-50 !default;
 $dropdown-box-shadow:    rgba(209, 217, 224, 0.8) 0px 0px 0px 1px, rgba(37, 41, 46, 0.04) 0px 6px 12px -3px, rgba(37, 41, 46, 0.12) 0px 6px 18px 0px !default;
 $dropdown-padding-x:    0.25rem !default;
 $dropdown-padding-y:    0.25rem !default;
+$dropdown-divider-bg: $gray-25 !default;
+$dropdown-divider-margin-y: 0.25rem !default;
+$dropdown-header-color: $gray-500 !default;
 
-$modal-content-border-color: $border-color;
-$modal-header-padding: 1rem 1.25rem 0.5rem 1.25rem;
-$modal-inner-padding: 1rem 1.25rem 1rem 1.25rem;
+$modal-backdrop-bg:                 $white !default;
+$modal-backdrop-opacity:            0.8 !default;
+$modal-content-border-color: $border-color !default;
+$modal-header-padding: 1rem 1.25rem 1rem 1.25rem !default;
+$modal-inner-padding: 1rem 1.25rem 1rem 1.25rem !default;
+$modal-fade-transform:              translate(0, 0) !default;
+$modal-show-transform:              none !default;
+$modal-transition:                  transform .2s ease-out !default;
+$modal-scale-transform:             scale(1.02) !default;
+$modal-content-border-width: 0px !default;
+$modal-header-border-width: 1px !default;
+$modal-content-box-shadow-xs: rgba(0, 0, 0, 0.08) 0px 0px 0px 1px, rgba(0, 0, 0, 0.02) 0px 1px 1px 0px, rgba(0, 0, 0, 0.04) 0px 8px 16px -4px, rgba(0, 0, 0, 0.06) 0px 24px 32px -8px !default;
+$modal-content-box-shadow-sm-up: $modal-content-box-shadow-xs !default;
+$modal-footer-margin-between: 0 !default;
 
 $alert-padding-y:                   0.5rem !default;
 $alert-padding-x:                   1rem !default;
