--- a/admin/app/assets/stylesheets/spree/admin/components/_main.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_main.scss
@@ -25,7 +25,7 @@ turbo-frame[loading] .spinner-border, turbo-frame[busy] .spinner-border {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  width: 250px;
+  width: 220px;
   background-color: $gray-25;
   border-right: 1px solid $gray-100;
   height: 100vh;
@@ -44,7 +44,7 @@ turbo-frame[loading] .spinner-border, turbo-frame[busy] .spinner-border {
     padding-right: 0.75rem;
   }
   .nav {
-    gap: 0.25rem;
+    gap: 0.125rem;
     display: flex;
     flex-direction: column;
   }
@@ -57,23 +57,21 @@ turbo-frame[loading] .spinner-border, turbo-frame[busy] .spinner-border {
     padding-right: 0.5rem;
     padding-top: 0.35rem;
     padding-bottom: 0.35rem;
-    font-weight: 500;
-    transition: background 0.35s, color 0.1s;
-    will-change: background, color;
-    color: $body-color;
+    font-weight: 400;
+    color: $gray-700;
 
     .ti {
-      font-size: 1.125rem;
+      font-size: 1rem;
       margin-right: 0.5rem;
     }
 
     &:hover {
       background-color: $gray-75;
-      transition-duration: 75ms;
-      animation-duration: 75ms;
     }
     &.active {
+      color: theme-color('primary');
       background-color: $gray-100;
+      font-weight: 500;
     }
 
     .badge {
