--- a/admin/app/views/spree/admin/coupon_codes/_coupon_code.html.erb
+++ b/admin/app/views/spree/admin/coupon_codes/_coupon_code.html.erb
@@ -2,7 +2,7 @@
   <td class="w-50">
     <div data-controller="clipboard">
       <code data-clipboard-target="source"><%= coupon_code[1].upcase %></code>
-      <button type="button" class="btn btn-link p-1 ml-2 with-tip" data-action="clipboard#copy" title="<%= Spree.t('admin.copy_to_clipboard') %>">
+      <button type="button" class="btn btn-light p-1 ml-2 with-tip" data-action="clipboard#copy" title="<%= Spree.t('admin.copy_to_clipboard') %>">
         <%= icon('copy-check', class: 'mr-0 font-size-sm') %>
       </button>
     </div>
