--- a/admin/app/views/spree/admin/shared/_alerts.html.erb
+++ b/admin/app/views/spree/admin/shared/_alerts.html.erb
@@ -5,12 +5,7 @@
         <div
           data-controller="notification"
           data-notification-delay-value="5000"
-          data-transition-enter-from="opacity-0 translate-x-6"
-          data-transition-enter-to="opacity-100 translate-x-0"
-          data-transition-leave-from="opacity-100 translate-x-0"
-          data-transition-leave-to="opacity-0 translate-x-6"
-
-          class="transition transform duration-200 hidden alert d-flex align-items-center <%= admin_flash_class_for(msg_type) %> align-items-center" style="min-width: 300px; pointer-events: all;">
+          class="animate__animated animate__fadeInDown animate__faster hidden alert d-flex align-items-center <%= admin_flash_class_for(msg_type) %> align-items-center" style="min-width: 300px; pointer-events: all;">
           <div class="d-flex align-items-center justify-content-between w-100">
             <div class="d-flex align-items-center justify-content-between">
               <span><%= text %></span>
