--- a/admin/app/views/spree/admin/storefront/edit.html.erb
+++ b/admin/app/views/spree/admin/storefront/edit.html.erb
@@ -2,6 +2,10 @@
   <%= Spree.t(:settings) %>
 <% end %>
 
+<% content_for :title do %>
+  <%= Spree.t(:settings) %>
+<% end %>
+
 <%= content_for(:page_actions) do %>
   <%= link_to_edit_translations(@store, classes: 'btn btn-light') %>
 <% end %>
